--- a/src/app/recipes/recipe-list/recipe-list.component.css
+++ b/src/app/recipes/recipe-list/recipe-list.component.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  height: 100%;
 }
 
 .no-recipes mat-card {
@@ -13,6 +13,7 @@
 
 .recipe-list {
   padding-bottom: 20px;
+  max-width: 450px;
 }
 
 mat-accordion {
