--- a/src/app/recipes/recipe-form/recipe-form.component.css
+++ b/src/app/recipes/recipe-form/recipe-form.component.css
@@ -2,7 +2,8 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 100%;
+  max-height: 1000px;
+  overflow: auto;
 }
 
 mat-card-title {
