--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,1 @@
-<div class="main-page">
-  <app-recipe-list></app-recipe-list>
-  <app-recipe-form></app-recipe-form>
-</div>
+<router-outlet> </router-outlet>
